<resources>
    <string name="app_name">SabRentKaro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="post_an_ad">Post a Product</string>
    <string name="search_products">Search Products</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="search_product">Search Product</string>
    <string name="products_of_your_choice_are_just_a_click_away_">Products of your choice are just a step away.</string>
    <string name="rent">Rent</string>
    <string name="brand">Brand</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="capacity">Capacity</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="brand_">Brand:</string>
    <string name="category_">Category:</string>
    <string name="type_">Type:</string>
    <string name="price_">Price:</string>
    <string name="capacity_">Capacity:</string>
    <string name="location_">Location:</string>
    <string name="rent_product">Rent Product</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="product_details">Product Details</string>
    <string name="product_name">Product Name</string>
    <string name="_">:</string>
    <string name="year_of_purchase">Year Of Purchase</string>
    <string name="month_of_purchase">Month Of Purchase</string>
    <string name="quantity">Quantity</string>
    <string name="product_rating">Product Rating</string>
    <string name="product_condition">Product Condition</string>
    <string name="model">Model</string>
    <string name="security_deposit">Security Deposit</string>
    <string name="daily_cost">Daily Cost</string>
    <string name="rent_value_details">Rent Value Details</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password_"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="confirm_email_id">Confirm Email Id</string>
    <string name="display_name">Display Name</string>
    <string name="select_country">Select Country</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="i_accept_to_the_terms_of_use_listing_policy_and_renting_policy_of_sabrentkaro">I accept to the Terms of Use, Listing Policy and Renting Policy of SabRentKaro</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="start_date">Start Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="end_date">End Date</string>
    <string name="next">Next</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="address">Address</string>
    <string name="city_town">City/Town</string>
    <string name="state">State</string>
    <string name="pin_code">Pincode</string>
    <string name="phone">Phone</string>
    <string name="documents">Documents</string>
    <string name="pan_card">PAN Card</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="pan_card_number">PAN Card Number</string>
    <string name="aadhar_card_name">Aadhar Card Name</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="select_document">Select Document</string>
    <string name="btn_continue">Continue</string>
    <string name="summary">Summary</string>
    <string name="total_cost">Total Cost</string>
    <string name="rental_period_in_days_">Rental Period (in Days)</string>
    <string name="description">Description</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="cost_type_summary">Cost Type Summary</string>
    <string name="product_rental_value">Product Rental Value</string>
    <string name="per_day_cost">Per Day Cost</string>
    <string name="per_month_cost">Per Month Cost</string>
    <string name="per_week_cost">Per Week Cost</string>
    <string name="facilitation_charges">Facilitation Charges</string>
    <string name="cost">Cost</string>
    <string name="service_tax">Service Tax</string>
    <string name="logistics_cost">Logistics Cost</string>
    <string name="the_product_rental_process_will_start_only_after_we_verify_your_details_thanks_for_helping_us_build_a_trusted_platform_">The product rental process will start only after we verify your details. Thanks for helping us build a trusted platform!</string>
    <string name="week_cost">Week Cost</string>
    <string name="month_cost">Month Cost</string>
    <string name="post_ad">Post Ad</string>
    <string name="tonnage">Tonnage</string>
    <string name="post_my_ad">Post My Product</string>
    <string name="what_would_you_like_to_post_an_ad_for_">What is your Product?<font fgcolor="#EC016D">*</font></string>
    <string name="select_product_category">Select Product Category</string>
    <string name="select_product_sub_category">Select Product Name</string>
    <string name="title_for_your_ad_">Title for your Product<font fgcolor="#EC016D">*</font></string>
    <string name="enter_title">Enter Title</string>
    <string name="upload_photos_of_your_product">Select Photos of your Product</string>
    <string name="short_descrption_of_your_product">Short Description of your Product</string>
    <string name="enter_short_description">Enter Short Description</string>
    <string name="rate_your_product_condition">Rate your Product Condition<font fgcolor="#EC016D">*</font></string>
    <string name="additional_details">Additional Details</string>
    <string name="any_instructions_to_be_followed_while_using_your_product_">Any instructions to be followed while using your product?</string>
    <string name="enter_instructions">Eg: Handle with care and ensure it is switched off after using</string>
    <string name="any_other_stuff_in_the_package_">Any other Stuff in the Package?</string>
    <string name="enter_stuff">Eg: Comes with a fancy external mouse and keyboard</string>
    <string name="control_type_and_capacity">Control, Type and Capacity</string>
    <string name="select_control">Select Control</string>
    <string name="select_type">Select Type</string>
    <string name="select_capacity">Select Capacity</string>
    <string name="how_much_did_you_get_it_for_">How much did you get it for?<font fgcolor="#EC016D">*</font></string>
    <string name="enter_purchased_cost">Enter Purchased Cost</string>
    <string name="how_much_do_you_want_to_rent_it_for_">How much do you want to rent it for?<font fgcolor="#EC016D">*</font></string>
    <string name="how_much_quantity_do_you_want_to_put_for_rent_">Quantity available for rent?<font fgcolor="#EC016D">*</font></string>
    <string name="enter_rent_cost">Enter Rent Cost</string>
    <string name="enter_monthly_rent_cost">Monthly Cost</string>
    <string name="enter_weekly_rent_cost">Weekly Cost</string>
    <string name="enter_daily_rent_cost">Daily Cost</string>
    <string name="how_much_security_deposit_would_you_like_to_collect_per_product_">What would be the Security Deposit?</string>
    <string name="enter_security_deposit">Enter Security Deposit</string>
    <string name="contact_number">Contact Number</string>
    <string name="clear">Clear</string>
    <string name="documents_address">Product Address</string>
    <string name="document_type">Document Type</string>
    <string name="product_address_is_same_as_current_address_">Product address is same as current address.</string>
    <string name="enter_address">Enter Address</string>
    <string name="cancel">Cancel</string>
    <string name="calendar_preferences">Calendar Preferences</string>
    <string name="know_more">Know More</string>
    <string name="location_preferences">Location Preferences</string>
    <string name="in_my_location">In My Location</string>
    <string name="selected_cities">Selected Cities</string>
    <string name="anywhere">Anywhere</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="home">Home</string>
    <string name="loading_">Loading...</string>
    <string name="select_rating">Select Rating</string>
    <string name="current_address">Current Address</string>
    <string name="select_city">Select City</string>
    <string name="upload">Upload</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="price_per_day">Price per Day:</string>
    <string name="title_">Title:</string>
    <string name="posted_by_">Posted By:</string>
    <string name="logged_user_">Logged User</string>
    <string name="address_">Address:</string>
    <string name="city_">City:</string>
    <string name="state_">State:</string>
    <string name="product_category">Product Category</string>
    <string name="sub_product_category">Sub Product Category</string>
    <string name="location_details">Location Details</string>
    <string name="product_title">Product Title</string>
    <string name="why_buy_when_you_can_rent_">Why buy when you can rent?</string>
    <string name="rent_smart_earn_smart">Rent Smart, Earn Smart</string>
    <string name="why_buy_rent_now_">Why buy? Rent now!</string>
    <string name="done">Done</string>
    <string name="rupeeone">\u20B9</string>
    <string name="listing_images">Listing Images</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_signed_up_yet_"><u>Not Signed up yet?</u></string>
    <string name="get_me_in">GET ME IN</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="select_user_type">Select User Type</string>
    <string name="enter_pan_card_number">Enter PAN Card Number</string>
    <string name="sign_up_to_proceed">Sign up to proceed</string>
    <string name="signup_with_email">Sign up with Email</string>
    <string name="proceed_to_continue">Proceed to Continue</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="legal_disclaimer">Legal Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="listing_policy">Listing Policy</string>
    <string name="renting_policy">Renting Policy</string>
    <string name="policy_info">Policy Info</string>
    <string name="price_per_week">Price per Week</string>
    <string name="price_per_month">Price per Month</string>
    <string name="your_preferred_minimum_period_for_rent">Your preferred Minimum Period for rent<font fgcolor="#EC016D">*</font></string>
    <string name="select_rent_period">Select Rent Period</string>
    <string name="rent_per_day">Rent per day</string>
    <string name="rent_per_day_if_rented_for_3_days_">Rent per day (if rented for 3 Days)</string>
    <string name="rent_per_week">Rent per week</string>
    <string name="rent_per_month">Rent per Month</string>
    <string name="rent_per_month_if_rented_for_3_months_">Rent per Month (if rented for 3 Months)</string>
    <string name="rent_per_month_if_rented_for_6_months_">Rent per month (if rented for 6 Months)</string>
</resources>