<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editUserAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/enter_address"
        android:inputType="text"
        android:padding="3dp"
        android:textSize="15sp" >
    </EditText>

    <com.utils.CustomTextView
        android:id="@+id/btnSelectUserCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/blue_button_selector"
        android:drawableEnd="@drawable/ic_arrow_down_"
        android:drawableRight="@drawable/ic_arrow_down_"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/select_city"
        android:textColor="@color/black"
        android:textSize="14sp"
        custom:fonttype="trebuchet_ms" />

    <EditText
        android:id="@+id/editUserState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/enter_state"
        android:inputType="text"
        android:padding="3dp"
        android:textSize="15sp" >
    </EditText>

    <EditText
        android:id="@+id/editUserPincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/enter_pincode"
        android:inputType="number"
        android:padding="3dp"
        android:textSize="15sp" >
    </EditText>

    <EditText
        android:id="@+id/editUserPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:padding="3dp"
        android:textSize="15sp" >
    </EditText>

</LinearLayout>