<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="5dp" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="#55000000"
                android:padding="5dp"
                android:text="@string/documents_address"
                android:textColor="@color/white"
                android:textSize="14sp"
                custom:fonttype="trebuchet_ms" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address"
                android:inputType="text"
                android:padding="3dp"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editCityTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_city"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_state"
                android:padding="3dp"
                android:layout_margin="3dp"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_pincode"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_phone_number"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:textSize="15sp" >
            </EditText>

            <CheckBox
                android:id="@+id/checkAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:checked="false"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/product_address_is_same_as_current_address_"
                android:textSize="14sp" />

            <com.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="#55000000"
                android:padding="5dp"
                android:text="@string/document_type"
                android:textColor="@color/white"
                android:textSize="14sp"
                custom:fonttype="trebuchet_ms" />

            <com.utils.CustomTextView
                android:id="@+id/btnPanCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/btn_unselect"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/btn_unselect"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/pan_card"
                android:textColor="@color/black"
                android:textSize="16sp"
                custom:fonttype="trebuchet_ms" />

            <LinearLayout
                android:id="@+id/layoutPanCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_selector"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone" >

                <com.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pan_card_number"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    custom:fonttype="trebuchet_ms" />

                <EditText
                    android:id="@+id/editPanCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp" />
            </LinearLayout>

            <com.utils.CustomTextView
                android:id="@+id/btnAadharCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/btn_unselect"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/btn_unselect"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/aadhar_card"
                android:textColor="@color/black"
                android:textSize="16sp"
                custom:fonttype="trebuchet_ms" />

            <LinearLayout
                android:id="@+id/layoutAadharCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button_selector"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone" >

                <com.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/aadhar_card_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    custom:fonttype="trebuchet_ms" />

                <EditText
                    android:id="@+id/editAadharName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp" />

                <com.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/aadhar_card_number"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    custom:fonttype="trebuchet_ms" />

                <EditText
                    android:id="@+id/editAadharNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="3dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.utils.CustomTextView
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:background="@drawable/blue_custom_button_selector"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    custom:fonttype="trebuchet_ms" />

                <com.utils.CustomTextView
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:background="@drawable/blue_custom_button_selector"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    custom:fonttype="trebuchet_ms" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>