<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_email_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <com.utils.CustomTextView
            android:id="@+id/btnLoginUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/blue_custom_button_selector"
            android:clickable="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            custom:fonttype="trebuchet_ms" />
    </LinearLayout>

</FrameLayout>